--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -15,7 +15,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.85; Database=IFINSYS_TRAIN; User ID=sa; Password=PTIMS.Tec; Connection Timeout=0; Persist Security Info=true"
+    "DefaultConnection": "Server=147.139.143.217,1433; Database=ASTRA; User ID=sa; Password=PTIMS.Tec; Connection Timeout=0; Persist Security Info=true"
   },
 
   "DocumentSetting": {
